# Modulab

./: .gitignore  Modulab.spec  README.md  main.py  mainwindow.py  pyproject.toml  requirements.txt  ui_form.py
core/: constants.py  context.py  form.ui  mainwindow.py  std_includes.py  ui_form.py  updater.py
demo/: demo_sweep_experiment.py  snake.py
docs/: conf.py  index.rst
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/latex/: modulab.aux  modulab.idx  modulab.out  modulab.tex  modulab.toc
docs/modulab/: api.rst  export_manager.rst  profile_manager.rst
modules/data/: Hdf5Viewer.py  LivePlotWidget.py
modules/device/: DeviceManager.py  DeviceWidget copy.py  DeviceWidget.py  DeviceWidget.ui  DeviceWidgetEdit.ui  ui_DeviceWidget.py  ui_DeviceWidgetEdit.py
modules/experiment/: ExperimentManager.py  ExperimentWidget.py  ExperimentWidget.ui  ui_ExperimentWidget.py
modules/export/: ExportManager.py
modules/log/: LogManager.py  LogWidget.py  LogWidget.ui  ui_LogWidget.py
modules/profile/: ProfileManager.py  ProfileView.py  ProfileWidget.py  ProfileWidget.ui  ProfileWidgetNew.ui  ui_ProfileWidget.py  ui_ProfileWidgetNew.py
modules/smu/: Keithley2602.py  SmuManager.py  SmuWidget.py  SmuWidget.ui  ui_SmuWidget.py
modules/spectrometer/: SpectrometerManager.py  SpectrometerWidget.py  SpectrometerWidget.ui  ui_SpectrometerWidget.py
source/: conf.py
tools/: modulab.qmodel
(+21 files in other folders)
